# isostuffer

./: CMakeLists.txt  README.md  isostuffer.m  readSTUFF.m
cmake/: FindMKL.cmake
src/: CMakeLists.txt  config.h
src/geometry/: FixVtxTetMesh.hpp  KDTree.hpp  OBBTree.hpp  OBBTreeNode.hpp  Tet.hpp  TetMesh.hpp  Triangle.hpp  TriangleMesh.hpp
src/io/: MatrixIO.hpp  TetMeshWriter.hpp  TglMeshReader.hpp
src/linearalgebra/: Matrix.hpp  Matrix3.hpp  Quaternion.hpp  Vector3.hpp
src/ui/: IsoStufferFrame.cpp  IsoStufferFrame.h
